fixed #menu-wrap on medium screens

--- a/style.css
+++ b/style.css
@@ -772,6 +772,9 @@ figcaption {
 
 @media screen and (min-width: 768px) and (max-width: 959.99px){
 
+    #site-header-wrapper #menu-wrap {
+        margin: 0 1em;
+    }
 }
 
 @media screen and (min-width: 960px) and (max-width: 1199.99px){
